# PatternProject

./: README.md  architecture.md  main.cpp
Emlpoyment/: CMakeLists.txt  War.cpp  War.h
project/: CMakeLists.txt  main.cpp
project/ArmyCreation/: Army.cpp  Army.h  CMakeLists.txt  Game.cpp  Game.h
project/Characters/: BlackCharacters.cpp  BlackCharacters.h  CMakeLists.txt  Characters.h  WhiteCharacters.cpp  WhiteCharacters.h
project/Creation/: ArmyCreate.cpp  ArmyCreate.h  CMakeLists.txt
project/Unit/: BlackUnit.cpp  BlackUnit.h  CMakeLists.txt  Unit.h  WhiteUnit.cpp  WhiteUnit.h
project/Units/: BlackElf.cpp  BlackGiant.cpp  BlackWizard.cpp  WhiteElf.cpp  WhiteGiant.cpp  WhiteWizard.cpp
